# Emotionbot2

./: bot.py  main.py  premium_photo-1661395238464-87a8f235e4e6.avif  pyproject.toml  test.py  test2.py
