[project]
name = "emotionbot2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.6.1",
    "jaxlib>=0.6.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
]
